<resources>
    <string name="app_name">Мое расписание</string>

    <string name="tv_help">Выберите день недели:</string>
    <string name="tv_lesson_type">Тип занятия:</string>
    <string name="tv_teacher">Препод:</string>
    <string name="tv_day_of_week">День: </string>
    <string name="tv_time">Время:</string>
    <string name="tv_add_title">Добавление занятия</string>
    <string name="tv_lesson_name">Предмет:</string>
    <string name="tv_warning">Добавьте занятия, чтобы начать пользоваться приложением</string>
    <string name="tv_welcome">Добро пожаловать!!!</string>
    <string name="tv_comment">Комментарий:</string>
    <string name="tv_your_schedule">Ваше расписание на </string>
    <string name="tv_auditory">Каб №</string>
    <string name="test_day">Понедельник</string>
    <string name="test_lesson">Основы теории алгоритмов</string>
    <string name="test_teacher">Иванов П.М</string>
    <string name="test_time">00:00</string>
    <string name="test_time2">11:40</string>
    <string name="test_lesson2">ОБЖ</string>
    <string name="test_teacher2">Огромнаядлиннаяфамилия О.Г</string>
    <string name="test_auditory2">101 каб</string>
    <string name="test_type2">Лекция</string>
    <string name="test_auditory">каб</string>
    <string name="info">Инфо</string>
    <string name="btn_del">Удалить</string>
    <string name="btn_edit">Изменить</string>
    <string-array name="lesson_type_array">
        <item>Лекция</item>
        <item>Практика</item>
        <item>Экзамен</item>
        <item>Зачет</item>
    </string-array>

    <string-array name="teacher_array">
        <item>Петров И.В</item>
        <item>Иванов И.С</item>
        <item>Кораблев С.В</item>
        <item>Журова С.Н</item>
        <item>Ковальчук. М.И</item>
        <item>Пугин В.Л</item>
        <item>Аверьянова В.С</item>
        <item>Семенихина О.В</item>
        <item>Джаубатырова А.А</item>
        <item>Сидоров Е.Е</item>
    </string-array>

    <string-array name="days_array">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>

    <string-array name="lessons_array">
        <item>Физика</item>
        <item>Дискретная математика</item>
        <item>Теория информации</item>
        <item>Теория вероятностей</item>
        <item>Информационная безопасность</item>
        <item>Теория алгоритмов</item>
        <item>ОБЖ</item>
        <item>Иностранный язык</item>
        <item>Физическая культура</item>
        <item>Компьютерные сети</item>
        <item>Искусственный интеллект</item>
        <item>Охрана труда</item>
        <item>Веб-программирование</item>
        <item>Базы данных</item>
    </string-array>

    <string name="mon">Понедельник</string>
    <string name="tue">Вторник</string>
    <string name="wed">Cреда</string>
    <string name="thu">Четверг</string>
    <string name="fri">Пятница</string>
    <string name="sat">Суббота</string>
    <string name="test_type">Олимпиада</string>
    <string name="dialog_info">О приложении</string>
    <string name="OK">OK</string>
    <string name="cancel">Отмена</string>
    <string name="other">Дополнительные</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="teachers">Преподаватели</string>
    <string name="del">Редактирование</string>
    <string name="delete_tab">Удалить урок</string>
    <string name="update_tab">Обновить урок</string>
    <string name="vk_in">Vk</string>
    <string name="tv_edit_title">Редактирование текущего занятия</string>
    <string name="hint_name">Название урока</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_message">Выберите действие</string>
    <string name="DELETE">Удалить</string>
    <string name="EDIT">Изменить</string>

    <string-array name="action_items">
        <item>Изменить</item>
        <item>Удалить</item>
    </string-array>
    <string name="title_activity_settings">Настройки</string>
    <string name="db_clearn">Очистить БД</string>
    <string name="lang">Язык приложения</string>

    <string-array name="langs">
        <item>Английский</item>
        <item>Русский</item>
    </string-array>

    <string name="connect_us">Написать нам!</string>
    <string name="alert_delete_message">Данные будут удалены безвозвратно</string>
    <string name="CONTUNUE">Продолжить</string>
    <string name="CANCEL">Отмена</string>
    <string name="attention">Внимание!</string>
    <string name="lessons">Все уроки</string>
    <string name="del_or_update_mgs">Удалить или изменить?</string>
    <string name="nav_about">О приложении</string>
    <string name="author">Автор:</string>
    <string name="login">Войти</string>
    <string name="action_settings">Settings</string>
    <string name="nickname">Введите никнейм</string>
    <string name="signIn">Войти</string>
    <string name="title_activity_all_lessons">Избранное</string>
    <string name="fav_chb">В избранное</string>
    <string name="exams">Экзамены</string>
    <string name="activity_exam">Текущие экзамены</string>
    <string name="favourite_lessons">Важные</string>
    <string name="lesson">Лекции</string>
    <string name="practice">Практика</string>
    <string name="test">Зачеты</string>
    <string name="title_activity_lection">Лекции</string>
    <string name="title_activity_practice">Практические работы</string>
    <string name="title_activity_test">Зачеты</string>
    <string name="dialog_delete_item">Хотите удалить урок?</string>

</resources>
