<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="7dp"
        android:id="@+id/cv" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/test_lesson2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_lesson"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="13dp"
                android:layout_marginStart="13dp"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:layout_alignTop="@+id/tv_teacher" />

            <TextView
                android:text="@string/test_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_time"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/tv_teacher"
                android:layout_alignStart="@+id/tv_teacher"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="12dp" />

            <TextView
                android:text="@string/test_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_type"
                android:layout_alignBaseline="@+id/tv_time"
                android:layout_alignBottom="@+id/tv_time"
                android:layout_alignLeft="@+id/tv_lesson"
                android:layout_alignStart="@+id/tv_lesson"
                android:background="@color/colorAccent" />

            <TextView
                android:text="@string/test_auditory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_auditory"
                android:layout_alignBaseline="@+id/tv_type"
                android:layout_alignBottom="@+id/tv_type"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="@string/test_teacher2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_teacher"
                android:textSize="12sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="13dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>