<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/test_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="56dp"
        android:id="@+id/tvType"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="@string/test_lesson2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvType"
        android:layout_alignLeft="@+id/tvType"
        android:layout_alignStart="@+id/tvType"
        android:layout_marginTop="25dp"
        android:id="@+id/tvLesson"
        android:textSize="24sp" />

    <TextView
        android:text="@string/test_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="62dp"
        android:layout_marginEnd="62dp"
        android:id="@+id/tvTime"
        android:textSize="30sp"
        android:layout_alignTop="@+id/tvType" />

    <TextView
        android:text="@string/test_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLesson"
        android:layout_alignLeft="@+id/tvLesson"
        android:layout_alignStart="@+id/tvLesson"
        android:layout_marginTop="19dp"
        android:id="@+id/tvTeacher" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="23dp"
        android:id="@+id/floatingActionButton4" />

</RelativeLayout>