<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/tabs">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView10"
        android:layout_toRightOf="@+id/textView10"
        android:layout_toEndOf="@+id/textView10"
        android:layout_marginLeft="77dp"
        android:layout_marginStart="77dp"
        android:id="@+id/spinnerType"
        android:spinnerMode="dialog"
        android:entries="@array/lesson_type_array" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignLeft="@+id/spinnerType"
        android:layout_alignStart="@+id/spinnerType"
        android:id="@+id/spinnerTeacher"
        android:spinnerMode="dialog"
        android:entries="@array/teacher_array" />

    <TextView
        android:text="@string/tv_day_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerTeacher"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11"
        android:layout_marginTop="26dp"
        android:id="@+id/textView14" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignLeft="@+id/spinnerTeacher"
        android:layout_alignStart="@+id/spinnerTeacher"
        android:id="@+id/spinnerDay"
        android:spinnerMode="dialog"
        android:entries="@array/days_array" />

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/tv_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/tv_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView11"
        android:layout_below="@+id/spinnerType"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <TextView
        android:text="@string/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/etTime"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_toRightOf="@+id/textView11" />


    <TextView
        android:text="@string/tv_lesson_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14"
        android:layout_marginTop="37dp"
        android:id="@+id/textView17" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerLesson"
        android:entries="@array/lessons_array"
        android:spinnerMode="dialog"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/spinnerDay"
        android:layout_alignStart="@+id/spinnerDay" />


    <TextView
        android:text="@string/tv_lesson_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView10"
        android:textSize="14sp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_done"
        android:layout_marginBottom="15dp"
        android:id="@+id/floatingActionButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_gravity="end|bottom"
        app:rippleColor="?attr/colorControlNormal" />

    <TextView
        android:text="@string/tv_auditory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTime"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:layout_marginTop="27dp"
        android:id="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etAuditory"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/etTime"
        android:layout_alignStart="@+id/etTime" />

</RelativeLayout>