<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/tv_lesson_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="19dp"
            android:id="@+id/textView12" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerType"
            android:entries="@array/lesson_type_array"
            android:layout_alignBottom="@+id/textView12"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView12" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner3"
            android:entries="@array/teacher_array"
            android:layout_alignTop="@+id/textView13"
            android:layout_alignLeft="@+id/spinnerType"
            android:layout_alignStart="@+id/spinnerType" />

        <TextView
            android:text="@string/tv_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:id="@+id/textView13"
            android:layout_below="@+id/textView12"
            android:layout_alignLeft="@+id/textView12"
            android:layout_alignStart="@+id/textView12" />

        <TextView
            android:text="@string/tv_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/textView15"
            android:layout_below="@+id/spinner3"
            android:layout_alignLeft="@+id/textView13"
            android:layout_alignStart="@+id/textView13" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView15"
            android:layout_toEndOf="@+id/textView13"
            android:id="@+id/spinnerDay"
            android:layout_alignLeft="@+id/spinner3"
            android:layout_alignStart="@+id/spinner3"
            android:entries="@array/days_array" />

        <TextView
            android:text="@string/tv_lesson_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerDay"
            android:layout_alignLeft="@+id/textView15"
            android:layout_alignStart="@+id/textView15"
            android:layout_marginTop="21dp"
            android:id="@+id/textView18" />

        <TextView
            android:text="@string/tv_auditory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView18"
            android:layout_alignLeft="@+id/textView18"
            android:layout_alignStart="@+id/textView18"
            android:layout_marginTop="31dp"
            android:id="@+id/textView19" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/spinnerLesson"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:id="@+id/etAuditory"
            android:layout_alignLeft="@+id/spinnerLesson"
            android:layout_alignStart="@+id/spinnerLesson" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerLesson"
            android:entries="@array/lessons_array"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/spinnerDay"
            android:layout_alignStart="@+id/spinnerDay"
            android:layout_alignTop="@+id/textView18" />
    </RelativeLayout>
</LinearLayout>